--- a/image-file-paths-broken-master/gear.html
+++ b/image-file-paths-broken-master/gear.html
@@ -11,11 +11,11 @@
 
 <body>
 
-  <a href="PATH TO INDEX WEB PAGE HERE"><img src="PATH TO LOGO" width="200"></a>
+  <a href="PATH TO INDEX WEB PAGE HERE"><img src="images/logo-climbing.jpg" width="200"></a>
   <h1>Rock Climbing Info</h1>
 
   <h2>Climbing Gear</h2>
-  <img src="PATH TO GEAR PHOTO" width="600">
+  <img src="images/climbing/gear.jpg" width="600">
 
 </body>
 </html>
