--- a/image-file-paths-broken-master/index.html
+++ b/image-file-paths-broken-master/index.html
@@ -11,19 +11,19 @@
 
 <body>
 
-  <a href="PATH TO INDEX WEB PAGE HERE"><img src="PATH TO LOGO" width="200"></a>
+  <a href="images/logo-climbing><img src="images/logo-climbing.jpg" width="200"></a>
   <h1>Rock Climbing Info</h1>
 
   <h2>What is Rock Climbing?</h2>
-  <a href="PATH TO "><img src="images/climbing/man-on-wall.jpg" width="200"></a>
+  <a href="man.html"><img src="images/climbing/man-on-wall.jpg" width="200"></a>
   <p><a href="https://www.climbing.com/">Rock climbing</a> is an activity in which participants climb up, down or across natural rock formations or artificial rock walls.</p>
 
   <h2>What does climbing gear do?</h2>
-  <a href="PATH TO GEAR PAGE"><img src="images/climbing/gear.jpg" width="200"></a>
+  <a href="gear.html"><img src="images/climbing/gear.jpg" width="200"></a>
   <p><a href=" http://www.trango.com/">Quickdraws</a> (often referred to as "draws") are used by climbers to connect ropes to bolt anchors, or to other traditional protection, allowing the rope to move through the anchoring system with minimal friction.</p>
 
   <h2>Why use chalk?</h2>
-  <a href="PATH TO CHALK PAGE"><img src="images/climbing/chalked-hands.jpg" width="200"></a>
+  <a href="chalk.html"><img src="images/climbing/chalked-hands.jpg" width="200"></a>
 </p><a href= " https://frictionlabs.com/">Chalk</a> is used by nearly all climbers to absorb problematic moisture, often sweat, on the hands.</p>
 
 </body>
