--- a/image-file-paths-broken-master/index.html
+++ b/image-file-paths-broken-master/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <a href="images/logo-climbing><img src="images/logo-climbing.jpg" width="200"></a>
+  <a href="images"><img src="images/logo-climbing.jpg" width="200"></a>
   <h1>Rock Climbing Info</h1>
 
   <h2>What is Rock Climbing?</h2>
